TRIB-4920 Intial commit